fix letter spacing

--- a/css/v2/src/website-header.css
+++ b/css/v2/src/website-header.css
@@ -94,6 +94,7 @@ span[id*=ListSection] {
     position: relative;
     z-index: 999;
     font-size: 15px;
+    letter-spacing: .05em;
 }
 .navigation-bar li.active a {
     color: #fff;
